		Planner: made lesson plan Summary field optional, auto grabs content from Lesson Details field if blank
		Planner: switched from JS to HTML for Smart Block placeholders
		Planner: improved text readability in weekly CLI email
		Planner: added option to share unit outline with users who do not have access to the unit planner, via the lesson planner.
		Resources: improved usability of tag entry interface
		Resources: fixed breakage of tags including apostrophes
		School Admin: fixed timezone issue in managing special days
		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
		School Admin: fixed PHP notice issue when adding special days
		School Admin: fixed PHP warning caused by empty arrays in Tracking Settings
		School Admin: added ability to link Educational Assistances to Form/Roll Groups
		School Admin: fixed leap year error in Manage Special Days
		School Admin: interface text tweak in Manage Grade Scales
		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
		Staff: tweaked student accept to remove - from names
		Staff: fixed date display in Job Openings manage page
		Staff: added setting to control public display of staff application form (public applications are on by default)
		Students: fixed PHP Notice bug in Student Enrolment Add screen
		Students: tweaked student accept to remove - from names
		Students: fixed broken link from Family in student profile to sibling, when sibling is not enroled in the year
		Students: removed delete function from Notes, added logging for edits
		Students: adjusted family view of student profile to ensure only adults with status Full show
		Students: added a confirmation email to parent 1 for external student application forms
		Students: fixed PayPal locale code to correctly set PayPal language on redirect
		Students: fixed tooltip alignment on alert bar above student profile image